--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'com.github.dcendents.android-maven'
+
+group = 'com.github.zj565061763'
 
 android {
     compileSdkVersion 27
@@ -22,19 +24,35 @@ android {
 dependencies {
 }
 
-publish {
-    userOrg = 'zj565061763'
-    groupId = 'com.fanwe.android'
-
-    artifactId = 'holder-object'
-    publishVersion = '1.0.4'
-    desc = 'android object holder library'
-    website = 'https://github.com/zj565061763/holder-object'
-}
-
+// 指定编码
 tasks.withType(Javadoc) {
     options {
         encoding "UTF-8"
         charSet 'UTF-8'
+        failOnError false
     }
+}
+
+// 打包源码
+task sourcesJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier = 'sources'
+}
+
+task javadoc(type: Javadoc) {
+    failOnError false
+    source = android.sourceSets.main.java.sourceFiles
+    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    classpath += configurations.compile
+}
+
+// 制作文档(Javadoc)
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
 }
